# BugReportAgent

./: .env.example  .gitignore  Makefile  README.md  config.yaml  docker-compose.yml  tags.md
agent/: Dockerfile  langgraph.json  pyproject.toml
agent/src/: config.py  dedup.py  main.py
agent/src/agent/: error_router.py  graph.py  nodes.py  runtime_overrides.py  state.py  studio.py
agent/src/mcp/: messenger_mcp.py  taiga_mcp.py  telegram_mcp.py
agent/src/qdrant_store/: client.py
agent/src/sources/: base.py  factory.py  mcp_source.py  rabbitmq_source.py
agent/src/telegram/: polling.py
agent/src/trackers/: __init__.py  base.py  factory.py  taiga_tracker.py
telegram_mcp_server/: Dockerfile  entrypoint.sh  pyproject.toml
telegram_mcp_server/src/: bot.py  config.py  heartbeat.py  main.py  server.py  topic_store.py
